[tool.poetry]
name = "onx"
version = "0.1.0"
description = "Client-server Tic Tac Toe (Noughts & Crosses) terminal based, online game through websockets."
authors = ["Vladimir Vyalov <vyalov.v@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/vyalovvldmr/onx"
keywords = [
    "Noughts & Crosses",
    "Tic Tac Toe",
    "terminal based game",
    "online game",
    "websockets",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Topic :: Games/Entertainment :: Board Games",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {version = "3.8.1", extras = ["speedups"]}
schema = "0.7.5"
textual = "0.1.18"
pyfiglet = "0.8.post1"
click = "8.1.3"
pydantic = "1.9.2"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
black = "22.6.0"
mypy = "0.971"
pylint = "2.14.5"
flake8 = "5.0.4"

[tool.poetry.scripts]
onx = "run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
